# pi-trading-lib

./: .gitignore  Cargo.toml  Makefile  shell.nix
config/: data_sources.csv
config/contracts/election_2020/: states_pres.json
doc/calibration/: calibration.html  calibration.md  calibration.tex
doc/momentum/: momentum.md
python/: .flake8  Makefile  Pipfile  mypy.ini  pyproject.toml  setup.py  test_lib.py
python/config/: data_archive.csv  fivethirtyeight.csv
python/config/contracts/election_2020/: states_pres.json
python/pi_trading_lib/: __init__.py  accountant.py  constants.py  contract_utils.py  date_util.py  dates.py  decorators.py  df_annotators.py  df_utils.py  fifo.py  fillstats.py  fs.py  logging.py  logging_ext.py  model.py  numpy_ext.py  optimizer.py  prod.py  score.py  scripting.py  sim.py  simulator.py  states.py  timers.py  tune.py  utils.py  work_dir.py
python/pi_trading_lib/config/: data_archive.csv  fivethirtyeight.csv
python/pi_trading_lib/config/contracts/election_2020/: states_pres.json
python/pi_trading_lib/data/: contract_db.py  contract_groups.py  contracts.py  data_archive.py  data_sources.py  fivethirtyeight.py  history.py  market_data.py  resolution.py  resolution_data.py
python/pi_trading_lib/data/db/: 1_initialize.sql  2_resolution.sql
python/pi_trading_lib/learning/: window_corr.py
python/pi_trading_lib/model_config/: __init__.py  calibration_model.py  core.py  current.py  current_short.py  election_only.py  fte_election.py  tuning_params.py
python/pi_trading_lib/models/: calibration.py  fte_election.py  fte_state_pres.py
python/pi_trading_lib/models/calibration_model/: calibration_model.py
python/pi_trading_lib/models/election_model/: __init__.py  naive.py
python/pi_trading_lib/scripts/: analyze_results.py  archiver.py  corr_visualize.py  data_util.py  generate_md_csv.py  lj.py  md_visualize.py  sampler_visualize.py  sim.py  update_contract_db.py  volumes.py
python/pi_trading_lib/simulation/: __init__.py  components.py  md_sim.py  tick_sim.py
python/pi_trading_lib/test/: window_corr_test.py
python/scripts/: archiver.py
rust/: Cargo.toml  Makefile
rust/src/: actor.rs  base.rs  learning.rs  lib.rs  market_data.rs  parser.rs
rust/src/actor/: components.rs
rust/src/learning/: components.rs  sampler.rs
rust/src/market_data/: api_parser.rs  md_cache.rs  md_stream.rs  reader.rs  writer.rs
src/: base.rs  main.rs  market_data.rs
src/market_data/: api_parser.rs  md_stream.rs
