[package]
name = "pi_trading_lib"
version = "0.1.0"
authors = ["David Zeng <davidzeng.42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
ureq = { version = "0.12.0", features = ["charset"] }

