[package]
name = "pi_trading_lib"
version = "0.1.0"
authors = ["David Zeng <davidzeng.42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pi_trading_lib"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "md_archiver"
path = "src/bin/md_archiver.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
serde_json="1.0"
ureq = { version = "0.12.0", features = ["charset"] }
chrono="0.4"
chrono-tz="0.5"
