[tool.poetry]
name = "pi_trading_lib"
version = "0.1.0"
description = ""
authors = ["David Zeng <davidzeng.42@gmail.com>"]
packages = [{ include = "pi_trading_lib" }]
include=["pi_trading_lib/py.typed", "pi_trading_lib/config/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
python-dateutil = "^2.8.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
