[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pi_trading_lib"
version = "0.1.0"
description = ""
authors = ["David Zeng <davidzeng.42@gmail.com>"]
packages = [{ include = "pi_trading_lib" }]
include=["pi_trading_lib/py.typed", "pi_trading_lib/config/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
scipy = "^1.5.2"
matplotlib = "^3.3.3"
plotly = "^4.14.3"
cvxpy = "^1.1.5"
mmh3 = "^3.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8"
python-language-server = "^0.36.2"
