cargo-features = ["named-profiles"]

[package]
name = "pi_trading_lib"
version = "0.1.0"
authors = ["David Zeng <davidzeng.42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pi_trading_lib"
path = "src/lib.rs"
edition = "2018"

[dependencies]
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "0.12.0", features = [] }
chrono= { version = "0.4", features = ["serde"] }
chrono-tz="0.5"
csv = "1.1"

[profile.release-bench]
inherits = "release"
debug = 1
